# c-scratchpad

./: .gitignore  CMakeLists.txt  README.md  README.txt  hello_world.s  testings  working.s
apps/: CMakeLists.txt  download.c  inject.c  scratchpad.c  vector.cpp  winapi.c  windows_reverse_tcp.c
include/: VirtualAllocExShellCode.h  calculator.h
scratchpad/include/: calculator.h
scratchpad/src/: CMakeLists.txt  main.c
src/: CMakeLists.txt  VirtualAllocExShellCode.c
test/: CMakeLists.txt  calculator_spec.cpp
